Fix title alignment and add divider

--- a/pagestyle.css
+++ b/pagestyle.css
@@ -1,15 +1,15 @@
 body {
   background-color: rgb(255, 255, 255);
-  padding: 1%;
+  padding: 5px;
+  text-align: center
 }
 
-header {
+#title {
   margin : 10px;
-  text-align: center;
   font-size: 3em;
   font-family: 'Noto Sans KR', sans-serif;
   border: solid black;
-  width: 40%;
+  display: inline-block;
 }
 
 .column {
@@ -18,6 +18,11 @@ header {
   border: solid black;
   padding: 10px;
   text-align: left;
+}
+
+.divider {
+  display: inline-block;
+  padding: 10px;
 }
 
 .body_part {
